--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
         integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <title>Item Lister</title>
     <script src="DOM.js" defer></script>
+    <style>
+        .edit{
+            margin-right: 2%;
+            background-color: rgb(210, 212, 212);
+            color: black;
+        }
+       
+    </style>
 </head>
 
 <body>
@@ -29,38 +37,22 @@
             <h2 class="title">Add Items</h2>
             <form id="addForm" class="form-inline mb-3">
                 <input type="text" class="form-control mr-2" id="item">
+                <input type="text" class="form-control mr-2"  id="item1">
                 <input type="submit" class="btn btn-dark" value="Submit">
             </form>
             <h2 class="title">Items</h2>
             <ul id="items" class="list-group">
                 <li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button>
-                    <button class="btn btn-danger btn-sm float-right edit">
-                        <img
-                        src="https://www.freeiconspng.com/thumbs/edit-icon-png/edit-new-icon-22.png"
-                        alt="edit" width="10" height="15" style= " float: inline-start " >
-                    </button>
+                    <button class="btn btn-dark btn-sm float-right edit">Edit</button>
                 </li>
                 <li class="list-group-item">Item 2 <button class="btn btn-danger btn-sm float-right delete">X</button>
-                    <button class="btn btn-danger btn-sm float-right edit">
-                        <img
-                        src="https://www.freeiconspng.com/thumbs/edit-icon-png/edit-new-icon-22.png"
-                        alt="edit" width="10" height="15" style= " float: inline-start " >
-                    </button>
+                    <button class="btn btn-dark btn-sm float-right edit">Edit</button>
                 </li>
                 <li class="list-group-item">Item 3 <button class="btn btn-danger btn-sm float-right delete">X</button>
-                        
-                        <button class="btn btn-danger btn-sm float-right edit">
-                            <img
-                            src="https://www.freeiconspng.com/thumbs/edit-icon-png/edit-new-icon-22.png"
-                            alt="edit" width="10" height="15" style= " float: inline-start " >
-                        </button>
+                    <button class="btn btn-dark btn-sm float-right edit">Edit</button>
                 </li>
                 <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button>
-                    <button class="btn btn-danger btn-sm float-right edit">
-                        <img
-                        src="https://www.freeiconspng.com/thumbs/edit-icon-png/edit-new-icon-22.png"
-                        alt="edit" width="10" height="15" style= " float: inline-start " >
-                    </button>
+                    <button class="btn btn-dark btn-sm float-right edit">Edit</button>
                 </li>
             </ul>
         </div>
