add edit delete on form along local storae

--- a/registration form.html
+++ b/registration form.html
@@ -11,7 +11,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-<script src="registrationForm.js" defer></script>
+  <script src="registrationForm.js" defer></script>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
         <label for="fullname">Full Name</label>
         <input type="text" class="form-control" id="fullname" name="fullname" placeholder="Enter Your Name">
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="form-group col-md-6">
           <label for="fathername">Father Name</label>
           <input type="text" class="form-control" id="fathername" name="fathername" placeholder="Enter Father Name">
@@ -74,11 +74,11 @@
       <div class="form-group">
         <label for="address">Address</label>
         <textarea class="form-control" id="address" name="address" placeholder="Enter Your Address"></textarea>
-      </div>
+      </div> -->
       <div class="row">
         <div class="form-group col-md-6">
           <label for="mobileno">Mobile Number</label>
-          <input type="tel" class="form-control" id="mobileno" name="mobileno">
+          <input type="tel" class="form-control" id="mobileno" name="mobileno" placeholder="Enter Mobile Number">
         </div>
         <div class="form-group col-md-6">
           <label for="mailid">Email Address</label>
@@ -86,13 +86,15 @@
         </div>
       </div>
       <button id="press" class="btn submit btn-dark mt-4">Submit</button>
+      <div>
+        <!-- <h4  class="m-4">Registered Student</h4> -->
+        <ul class="register form-group col-md-6">
+
+
+        </ul>
     </form>
 
-    <!-- <div >
-      <ul class="items">
-        <li class="item">First Li Tag</li>`
-        <li class="item">Second Li Tag</li>
-      </ul> -->
+
 
   </div>
   </div>
