--- a/first form.html
+++ b/first form.html
@@ -1,4 +1,4 @@
-<!-- <div class="container">
+ <div class="container">
     <h2 class="text-center mb-4">Student Registration Form </h2>
     <h4>Personal Details</h4>
 
@@ -50,5 +50,5 @@
 
 
     </form>
-  </div>-->
+  
 
